ICS - Pages Styling

--- a/services/application-software-development/custom-application-development.html
+++ b/services/application-software-development/custom-application-development.html
@@ -189,22 +189,22 @@
         </div>
     </section>
 
-      <!-- Call to Action Section -->
-  <section class="page-cta-section">
-    <div class="page-cta-content">
-      <h2>Looking for Custom development tailored to your business goals?</h2>
-      <p>Our expert team delivers scalable, secure, and high-performance solutions for startups, enterprises, and
-        everything in between.</p>
-      <!-- <div class="fsd-cta-icons">
+    <!-- Call to Action Section -->
+    <section class="page-cta-section">
+        <div class="page-cta-content">
+            <h2>Looking for Custom development tailored to your business goals?</h2>
+            <p>Our expert team delivers scalable, secure, and high-performance solutions for startups, enterprises, and
+                everything in between.</p>
+            <!-- <div class="fsd-cta-icons">
         <span><i class="fa-solid fa-rocket"></i></span>
         <span><i class="fa-solid fa-shield-halved"></i></span>
         <span><i class="fa-solid fa-users"></i></span>
       </div> -->
-      <div class="page-cta-action">
-        share your requirements
-      </div>
-    </div>
-  </section>
+            <div class="page-cta-action">
+                Share your requirements
+            </div>
+        </div>
+    </section>
     <!-- Installation Services Section (layout_03 style) -->
     <section class="page-install-section">
         <h2 class="page-install-title">Our Modernization Services Include: </h2>
@@ -255,111 +255,128 @@
             </div>
         </div>
     </section>
-  <section class="page-techstack-section">
-    <h2 class="page-techstack-title">Tech stack</h2>
-    <div class="page-techstack-table">
-      <div class="page-techstack-row">
-        <div class="page-techstack-label"><span>Frontend Development</span></div>
-        <div class="page-techstack-icons">
+    <section class="page-techstack-section">
+        <h2 class="page-techstack-title">Tech stack</h2>
+        <div class="page-techstack-table">
+            <div class="page-techstack-row">
+                <div class="page-techstack-label"><span>Frontend Development</span></div>
+                <div class="page-techstack-icons">
 
-         
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angularjs/angularjs-original-wordmark.svg" />
-            
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vuejs/vuejs-original-wordmark.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nuxtjs/nuxtjs-plain-wordmark.svg" />
 
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angularjs/angularjs-original-wordmark.svg" />
+
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" />
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vuejs/vuejs-original-wordmark.svg" />
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg" />
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" />
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nuxtjs/nuxtjs-plain-wordmark.svg" />
+
+                </div>
+            </div>
+            <div class="page-techstack-row">
+                <div class="page-techstack-label"><span>Backend Development</span></div>
+                <div class="page-techstack-icons">
+
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original-wordmark.svg" />
+
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original-wordmark.svg" />
+
+
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/dot-net/dot-net-original-wordmark.svg" />
+
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/csharp/csharp-original.svg" />
+
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original-wordmark.svg" />
+
+
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original-wordmark.svg" />
+
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/php/php-original.svg" />
+
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nextjs/nextjs-original-wordmark.svg" />
+
+                </div>
+            </div>
+            <div class="page-techstack-row">
+                <div class="page-techstack-label"><span>Mobile App<br>Development</span></div>
+                <div class="page-techstack-icons">
+
+
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/swift/swift-original-wordmark.svg" />
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/ionic/ionic-original-wordmark.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/flutter/flutter-plain.svg" />
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/kotlin/kotlin-original-wordmark.svg" />
+                </div>
+            </div>
+            <div class="page-techstack-row">
+                <div class="page-techstack-label"><span>DevOps Tools</span></div>
+                <div class="page-techstack-icons">
+
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/kubernetes/kubernetes-plain-wordmark.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jenkins/jenkins-original.svg" />
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/maven/maven-original-wordmark.svg" />
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/azuredevops/azuredevops-original.svg" />
+                </div>
+            </div>
+            <div class="page-techstack-row">
+                <div class="page-techstack-label"><span>Database Integration</span></div>
+                <div class="page-techstack-icons">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/oracle/oracle-original.svg" />
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mysql/mysql-original-wordmark.svg" />
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original-wordmark.svg" />
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/firebase/firebase-plain-wordmark.svg" />
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/microsoftsqlserver/microsoftsqlserver-original-wordmark.svg" />
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/dynamodb/dynamodb-original.svg" />
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postgresql/postgresql-original-wordmark.svg" />
+                    <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cosmosdb/cosmosdb-original-wordmark.svg" />
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="page-techstack-row">
-        <div class="page-techstack-label"><span>Backend Development</span></div>
-        <div class="page-techstack-icons">
+    </section>
 
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original-wordmark.svg" />
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original-wordmark.svg" />
-
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/dot-net/dot-net-original-wordmark.svg" />
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/csharp/csharp-original.svg" />
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original-wordmark.svg" />
-
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original-wordmark.svg" />
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/php/php-original.svg" />
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nextjs/nextjs-original-wordmark.svg" />
-
+    <section class="page-hire-banner">
+        <div class="page-hire-banner-inner">
+            <div class="page-hire-banner-content">
+                <h3>Hire custom developers</h3>
+                <p>Our result-oriented custom developers develop robust, secure and scalable enterprise-grade web
+                    applications. Get it through user-centric design and clean code.</p>
+                <ul>
+                    <li>Build dynamic data-driven apps using multiple technologies</li>
+                    <li>Rapid project delivery with multifaceted scope for growth</li>
+                    <li>Well-versed in front-end, back-end and DevOps</li>
+                    <li>Proficiency in maintenance and updates</li>
+                </ul>
+                <a href="#contact" class="btn-hire">Hire a custom Expert</a>
+            </div>
+            <div class="page-hire-banner-img">
+                <img src="/images/hiring.png" alt="Hire Custom Developer">
+            </div>
         </div>
-      </div>
-      <div class="page-techstack-row">
-        <div class="page-techstack-label"><span>Mobile App<br>Development</span></div>
-        <div class="page-techstack-icons">
-
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/swift/swift-original-wordmark.svg" />
-
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/ionic/ionic-original-wordmark.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/flutter/flutter-plain.svg" />
-           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/kotlin/kotlin-original-wordmark.svg" />
-
-        </div>
-      </div>
-      <div class="page-techstack-row">
-        <div class="page-techstack-label"><span>DevOps Tools</span></div>
-        <div class="page-techstack-icons">
-
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/kubernetes/kubernetes-plain-wordmark.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jenkins/jenkins-original.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/maven/maven-original-wordmark.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/azuredevops/azuredevops-original.svg" />
-        </div>
-      </div>
-      <div class="page-techstack-row">
-        <div class="page-techstack-label"><span>Database Integration</span></div>
-        <div class="page-techstack-icons">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/oracle/oracle-original.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mysql/mysql-original-wordmark.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original-wordmark.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/firebase/firebase-plain-wordmark.svg" />
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/microsoftsqlserver/microsoftsqlserver-original-wordmark.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/dynamodb/dynamodb-original.svg" />
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postgresql/postgresql-original-wordmark.svg" />
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cosmosdb/cosmosdb-original-wordmark.svg" />
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="page-hire-banner">
-    <div class="page-hire-banner-inner">
-      <div class="page-hire-banner-content">
-        <h3>Hire custom developers</h3>
-        <p>Our result-oriented custom developers develop robust, secure and scalable enterprise-grade web
-          applications. Get it through user-centric design and clean code.</p>
-        <ul>
-          <li>Build dynamic data-driven apps using multiple technologies</li>
-          <li>Rapid project delivery with multifaceted scope for growth</li>
-          <li>Well-versed in front-end, back-end and DevOps</li>
-          <li>Proficiency in maintenance and updates</li>
-        </ul>
-        <a href="#contact" class="btn-hire">Hire a custom Expert</a>
-      </div>
-      <div class="page-hire-banner-img">
-        <img src="/images/hiring.png" alt="Hire Custom Developer">
-      </div>
-    </div>
-  </section>
+    </section>
     <footer class="custom-footer">
         <div class="footer-top">
             <div class="footer-col">
@@ -372,7 +389,7 @@
                 </ul>
             </div>
             <div class="footer-col">
-                <h5>Technology</h5>
+                <h5>Technologies</h5>
                 <ul>
                     <li>Microsoft</li>
                     <li>AWS</li>
@@ -384,7 +401,7 @@
                 </ul>
             </div>
             <div class="footer-col">
-                <h5>IT Professional Services</h5>
+                <h5>Industries</h5>
                 <ul>
                     <li>Supply Chain</li>
                     <li>Manufacturing</li>
@@ -396,7 +413,7 @@
                 </ul>
             </div>
             <div class="footer-col">
-                <h5>Service Assurance</h5>
+                <h5>About</h5>
                 <ul>
                     <li>Company</li>
                     <li>Resources</li>
@@ -413,14 +430,22 @@
                         <span class="fi fi-ca"></span>
                         <span class="footer-office"><b>Informations Consultants Services Inc.</b></span><br>
                         <span>5236, Philias Gagnon,
-                            Montreal, Quebec,<br>Canada
-                            H1R 3Z6</span>
+                            Montreal, Quebec,<br> Canada
+                            H1R 3Z6</span><br>
+                        <div><span class="footer-icon"><i class="fa-solid fa-envelope"></i></span> <a
+                                href="mailto:sales@icstech.ca">sales@icstech.ca</a>
+                        </div>
+
                     </div>
+
                     <div class="footer-address">
                         <span class="fi fi-us "></span>
                         <span class="footer-office"><b>Missionmind IT Services LLC</b></span><br>
                         <span>11745 Stoney Peak Dr, 207
                             San Diego,<br>California, 92128, USA</span>
+                        <div><span class="footer-icon"><i class="fa-solid fa-envelope"></i></span> <a
+                                href="mailto:info@missionmindtech.com">info@missionmindtech.com</a>
+                        </div>
                     </div>
 
                     <div class="footer-address">
@@ -428,15 +453,13 @@
 
                         <span class="footer-office"><b>Missionmind IT Services Private Limited</b></span><br>
                         <span>8, Mariyamman Koil Street,
-                            Menambedu, Ambattur<br>Chennai,
+                            Menambedu, Ambattur,<br>Chennai,
                             Tamil Nadu 600053, India.</span>
-                    </div>
-                    <div class="footer-address">
-                        <div><b>CALL</b></div>
-                        <div><span class="footer-icon">📞</span> <a href="tel:+18663457638">+1 (866) 345-7638</a>
-                        </div>
-                        <div><span class="footer-icon">✉️</span> <a
-                                href="mailto:info@softwebsolutions.com">info@softwebsolutions.com</a></div>
+                        <div><span class="footer-icon"><i class="fa-solid fa-phone"></i>
+                            </span> <a href="tel:+914426862365">+91 4426862365</a></div>
+                        <div><span class="footer-icon"><i class="fa-solid fa-envelope"></i>
+                            </span> <a href="mailto:info@missionmindtech.com">info@missionmindtech.com</a></div>
+
                     </div>
                 </div>
             </div>
@@ -461,18 +484,16 @@
                 <div class="footer-social">
                     <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+
                 </div>
-                <div class="footer-cert">
-                    <img src="images/soc2.png" alt="SOC2" class="footer-cert-img">
-                    <img src="images/iso.png" alt="ISO" class="footer-cert-img">
-                </div>
+
             </div>
         </div>
         <div class="footer-copyright">
-            © 2025 Softweb Solutions Inc. (An Avnet Company) All rights reserved.
+            Copyright© 2024 inspirationcs.ca All Rights Reserved
         </div>
     </footer>
 
