--- a/services/application-software-development/legacy-system-modernization.html
+++ b/services/application-software-development/legacy-system-modernization.html
@@ -150,7 +150,7 @@
         </div>
     </section>
 
-    <footer class="custom-footer">
+  <footer class="custom-footer">
         <div class="footer-top">
             <div class="footer-col">
                 <h5>Services</h5>
@@ -162,7 +162,7 @@
                 </ul>
             </div>
             <div class="footer-col">
-                <h5>Technology</h5>
+                <h5>Technologies</h5>
                 <ul>
                     <li>Microsoft</li>
                     <li>AWS</li>
@@ -174,7 +174,7 @@
                 </ul>
             </div>
             <div class="footer-col">
-                <h5>IT Professional Services</h5>
+                <h5>Industries</h5>
                 <ul>
                     <li>Supply Chain</li>
                     <li>Manufacturing</li>
@@ -186,7 +186,7 @@
                 </ul>
             </div>
             <div class="footer-col">
-                <h5>Service Assurance</h5>
+                <h5>About</h5>
                 <ul>
                     <li>Company</li>
                     <li>Resources</li>
@@ -203,14 +203,21 @@
                         <span class="fi fi-ca"></span>
                         <span class="footer-office"><b>Informations Consultants Services Inc.</b></span><br>
                         <span>5236, Philias Gagnon,
-                            Montreal, Quebec,<br>Canada
-                            H1R 3Z6</span>
+                            Montreal, Quebec,<br> Canada
+                            H1R 3Z6</span><br>
+                        <div><span class="footer-icon"><i class="fa-solid fa-envelope"></i></span> <a href="mailto:sales@icstech.ca">sales@icstech.ca</a>
+                        </div>
+
                     </div>
+
                     <div class="footer-address">
                         <span class="fi fi-us "></span>
                         <span class="footer-office"><b>Missionmind IT Services LLC</b></span><br>
                         <span>11745 Stoney Peak Dr, 207
                             San Diego,<br>California, 92128, USA</span>
+                        <div><span class="footer-icon"><i class="fa-solid fa-envelope"></i></span> <a
+                                href="mailto:info@missionmindtech.com">info@missionmindtech.com</a>
+                        </div>
                     </div>
 
                     <div class="footer-address">
@@ -218,15 +225,13 @@
 
                         <span class="footer-office"><b>Missionmind IT Services Private Limited</b></span><br>
                         <span>8, Mariyamman Koil Street,
-                            Menambedu, Ambattur<br>Chennai,
+                            Menambedu, Ambattur,<br>Chennai,
                             Tamil Nadu 600053, India.</span>
-                    </div>
-                    <div class="footer-address">
-                        <div><b>CALL</b></div>
-                        <div><span class="footer-icon">📞</span> <a href="tel:+18663457638">+1 (866) 345-7638</a>
-                        </div>
-                        <div><span class="footer-icon">✉️</span> <a
-                                href="mailto:info@softwebsolutions.com">info@softwebsolutions.com</a></div>
+                        <div><span class="footer-icon"><i class="fa-solid fa-phone"></i>
+                            </span> <a href="tel:+914426862365">+91 4426862365</a></div>
+                        <div><span class="footer-icon"><i class="fa-solid fa-envelope"></i>
+                            </span> <a href="mailto:info@missionmindtech.com">info@missionmindtech.com</a></div>
+
                     </div>
                 </div>
             </div>
@@ -251,18 +256,16 @@
                 <div class="footer-social">
                     <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+
                 </div>
-                <div class="footer-cert">
-                    <img src="images/soc2.png" alt="SOC2" class="footer-cert-img">
-                    <img src="images/iso.png" alt="ISO" class="footer-cert-img">
-                </div>
+
             </div>
         </div>
         <div class="footer-copyright">
-            © 2025 Softweb Solutions Inc. (An Avnet Company) All rights reserved.
+            Copyright© 2024 inspirationcs.ca All Rights Reserved
         </div>
     </footer>
 
