--- a/index.html
+++ b/index.html
@@ -484,8 +484,7 @@
                         <span>5236, Philias Gagnon,
                             Montreal, Quebec,<br> Canada
                             H1R 3Z6</span><br>
-                        <!-- <div><span class="footer-icon">📞</span> <a href="tel:+18663457638">+1 (866) 345-7638</a></div> -->
-                        <div><span class="footer-icon">✉️</span> <a href="mailto:sales@icstech.ca">sales@icstech.ca</a>
+                        <div><span class="footer-icon"><i class="fa-solid fa-envelope"></i></span> <a href="mailto:sales@icstech.ca">sales@icstech.ca</a>
                         </div>
 
                     </div>
@@ -495,7 +494,7 @@
                         <span class="footer-office"><b>Missionmind IT Services LLC</b></span><br>
                         <span>11745 Stoney Peak Dr, 207
                             San Diego,<br>California, 92128, USA</span>
-                        <div><span class="footer-icon">✉️</span> <a
+                        <div><span class="footer-icon"><i class="fa-solid fa-envelope"></i></span> <a
                                 href="mailto:info@missionmindtech.com">info@missionmindtech.com</a>
                         </div>
                     </div>
@@ -507,9 +506,10 @@
                         <span>8, Mariyamman Koil Street,
                             Menambedu, Ambattur,<br>Chennai,
                             Tamil Nadu 600053, India.</span>
-                        <div><span class="footer-icon">📞</span> <a href="tel:+914426862365">+91 4426862365</a></div>
-                        <div><span class="footer-icon">✉️</span> <a
-                                href="mailto:info@missionmindtech.com">info@missionmindtech.com</a></div>
+                        <div><span class="footer-icon"><i class="fa-solid fa-phone"></i>
+                            </span> <a href="tel:+914426862365">+91 4426862365</a></div>
+                        <div><span class="footer-icon"><i class="fa-solid fa-envelope"></i>
+                            </span> <a href="mailto:info@missionmindtech.com">info@missionmindtech.com</a></div>
 
                     </div>
                 </div>
@@ -535,11 +535,12 @@
                 <div class="footer-social">
                     <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+
                 </div>
-                
+
             </div>
         </div>
         <div class="footer-copyright">
