--- a/services/service-assurance/service-now.html
+++ b/services/service-assurance/service-now.html
@@ -324,121 +324,124 @@
       </div>
     </div>
   </div>
-
   <footer class="custom-footer">
-    <div class="footer-top">
-      <div class="footer-col">
-        <h5>Services</h5>
-        <ul>
-          <li>Application Software Development </li>
-          <li>IT Consulting</li>
-          <li>IT Professional Services</li>
-          <li>Service Assurance</li>
-        </ul>
-      </div>
-      <div class="footer-col">
-        <h5>Technology</h5>
-        <ul>
-          <li>Microsoft</li>
-          <li>AWS</li>
-          <li>Salesforce</li>
-          <li>Azure Cloud</li>
-          <li>Power Platform</li>
-          <li>Mulesoft</li>
-          <li>Needle GenAI Framework</li>
-        </ul>
-      </div>
-      <div class="footer-col">
-        <h5>IT Professional Services</h5>
-        <ul>
-          <li>Supply Chain</li>
-          <li>Manufacturing</li>
-          <li>Finance</li>
-          <li>Healthcare</li>
-          <li>Energy</li>
-          <li>Telecom</li>
-          <li>Semiconductor</li>
-        </ul>
-      </div>
-      <div class="footer-col">
-        <h5>Service Assurance</h5>
-        <ul>
-          <li>Company</li>
-          <li>Resources</li>
-          <li>Careers</li>
-          <li>Success Stories</li>
-        </ul>
-      </div>
-    </div>
-    <hr class="footer-divider">
-    <div class="footer-middle">
-      <div class="footer-logo-address">
-        <div class="footer-address-group">
-          <div class="footer-address">
-            <span class="fi fi-ca"></span>
-            <span class="footer-office"><b>Informations Consultants Services Inc.</b></span><br>
-            <span>5236, Philias Gagnon,
-              Montreal, Quebec,<br>Canada
-              H1R 3Z6</span>
-          </div>
-          <div class="footer-address">
-            <span class="fi fi-us "></span>
-            <span class="footer-office"><b>Missionmind IT Services LLC</b></span><br>
-            <span>11745 Stoney Peak Dr, 207
-              San Diego,<br>California, 92128, USA</span>
-          </div>
-
-          <div class="footer-address">
-            <span class="fi fi-in"></span>
-
-            <span class="footer-office"><b>Missionmind IT Services Private Limited</b></span><br>
-            <span>8, Mariyamman Koil Street,
-              Menambedu, Ambattur<br>Chennai,
-              Tamil Nadu 600053, India.</span>
-          </div>
-          <div class="footer-address">
-            <div><b>CALL</b></div>
-            <div><span class="footer-icon">📞</span> <a href="tel:+18663457638">+1 (866) 345-7638</a></div>
-            <div><span class="footer-icon">✉️</span> <a
-                href="mailto:info@softwebsolutions.com">info@softwebsolutions.com</a></div>
-          </div>
+        <div class="footer-top">
+            <div class="footer-col">
+                <h5>Services</h5>
+                <ul>
+                    <li>Application Software Development </li>
+                    <li>IT Consulting</li>
+                    <li>IT Professional Services</li>
+                    <li>Service Assurance</li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h5>Technologies</h5>
+                <ul>
+                    <li>Microsoft</li>
+                    <li>AWS</li>
+                    <li>Salesforce</li>
+                    <li>Azure Cloud</li>
+                    <li>Power Platform</li>
+                    <li>Mulesoft</li>
+                    <li>Needle GenAI Framework</li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h5>Industries</h5>
+                <ul>
+                    <li>Supply Chain</li>
+                    <li>Manufacturing</li>
+                    <li>Finance</li>
+                    <li>Healthcare</li>
+                    <li>Energy</li>
+                    <li>Telecom</li>
+                    <li>Semiconductor</li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h5>About</h5>
+                <ul>
+                    <li>Company</li>
+                    <li>Resources</li>
+                    <li>Careers</li>
+                    <li>Success Stories</li>
+                </ul>
+            </div>
         </div>
-      </div>
+        <hr class="footer-divider">
+        <div class="footer-middle">
+            <div class="footer-logo-address">
+                <div class="footer-address-group">
+                    <div class="footer-address">
+                        <span class="fi fi-ca"></span>
+                        <span class="footer-office"><b>Informations Consultants Services Inc.</b></span><br>
+                        <span>5236, Philias Gagnon,
+                            Montreal, Quebec,<br> Canada
+                            H1R 3Z6</span><br>
+                        <div><span class="footer-icon"><i class="fa-solid fa-envelope"></i></span> <a href="mailto:sales@icstech.ca">sales@icstech.ca</a>
+                        </div>
 
-    </div>
-    <hr class="footer-divider">
-    <div class="footer-bottom">
-      <div class="footer-links">
-        <a href="#">Home</a>
-        <span>|</span>
-        <a href="#">Privacy Policy</a>
-        <span>|</span>
-        <a href="#">Cookie Policy</a>
-        <span>|</span>
-        <a href="#">CSR Policy</a>
-        <span>|</span>
-        <a href="#">Contact</a>
-        <span>|</span>
-        <a href="#">Legal and Copyright Notices</a>
-      </div>
-      <div class="footer-social-cert">
-        <div class="footer-social">
-          <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-          <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    </div>
+
+                    <div class="footer-address">
+                        <span class="fi fi-us "></span>
+                        <span class="footer-office"><b>Missionmind IT Services LLC</b></span><br>
+                        <span>11745 Stoney Peak Dr, 207
+                            San Diego,<br>California, 92128, USA</span>
+                        <div><span class="footer-icon"><i class="fa-solid fa-envelope"></i></span> <a
+                                href="mailto:info@missionmindtech.com">info@missionmindtech.com</a>
+                        </div>
+                    </div>
+
+                    <div class="footer-address">
+                        <span class="fi fi-in"></span>
+
+                        <span class="footer-office"><b>Missionmind IT Services Private Limited</b></span><br>
+                        <span>8, Mariyamman Koil Street,
+                            Menambedu, Ambattur,<br>Chennai,
+                            Tamil Nadu 600053, India.</span>
+                        <div><span class="footer-icon"><i class="fa-solid fa-phone"></i>
+                            </span> <a href="tel:+914426862365">+91 4426862365</a></div>
+                        <div><span class="footer-icon"><i class="fa-solid fa-envelope"></i>
+                            </span> <a href="mailto:info@missionmindtech.com">info@missionmindtech.com</a></div>
+
+                    </div>
+                </div>
+            </div>
+
         </div>
-        <div class="footer-cert">
-          <img src="images/soc2.png" alt="SOC2" class="footer-cert-img">
-          <img src="images/iso.png" alt="ISO" class="footer-cert-img">
+        <hr class="footer-divider">
+        <div class="footer-bottom">
+            <div class="footer-links">
+                <a href="#">Home</a>
+                <span>|</span>
+                <a href="#">Privacy Policy</a>
+                <span>|</span>
+                <a href="#">Cookie Policy</a>
+                <span>|</span>
+                <a href="#">CSR Policy</a>
+                <span>|</span>
+                <a href="#">Contact</a>
+                <span>|</span>
+                <a href="#">Legal and Copyright Notices</a>
+            </div>
+            <div class="footer-social-cert">
+                <div class="footer-social">
+                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+
+                </div>
+
+            </div>
         </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      © 2025 Softweb Solutions Inc. (An Avnet Company) All rights reserved.
-    </div>
-  </footer>
+        <div class="footer-copyright">
+            Copyright© 2024 inspirationcs.ca All Rights Reserved
+        </div>
+    </footer>
 
   <script>
     // Service content data
